# GeoIP2-python

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  .travis-black.sh  .travis-pylint.sh  .travis-yapf.sh  .travis.yml  CLAUDE.md  HISTORY.rst  MANIFEST.in  README.rst  lychee.toml  mise.toml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  lint.yml  release.yml  test.yml  zizmor.yml
dev-bin/: release.sh
docs/: Makefile  conf.py  index.rst
examples/: benchmark.py
geoip2/: __init__.py  _internal.py  compat.py  database.py  errors.py  mixins.py  models.py  records.py  webservice.py  webservices.py
src/geoip2/: __init__.py  _internal.py  database.py  models.py  records.py  types.py  webservice.py
tests/: database_test.py  models_test.py  webservice_test.py  webservices_test.py
