[project]
name = "geoip2"
version = "5.1.0"
description = "MaxMind GeoIP2 API"
authors = [
    {name = "Gregory Oschwald", email = "goschwald@maxmind.com"},
]
dependencies = [
    "aiohttp>=3.6.2,<4.0.0",
    "maxminddb>=2.7.0,<3.0.0",
    "requests>=2.24.0,<3.0.0",
]
requires-python = ">=3.9"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: Proxy Servers",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-httpserver>=1.0.10",
    "types-requests>=2.32.0.20250328",
]
lint = [
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "ruff>=0.11.6",
]

[build-system]
requires = [
    "setuptools>=77.0.3",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://www.maxmind.com/"
Documentation = "https://geoip2.readthedocs.org/"
"Source Code" = "https://github.com/maxmind/GeoIP2-python"
"Issue Tracker" = "https://github.com/maxmind/GeoIP2-python/issues"

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Skip type annotation on **_
    "ANN003",

    # documenting magic methods
    "D105",

    # Don't bother with future imports for type annotations
    "FA100",

    # Magic numbers for HTTP status codes seem ok most of the time.
    "PLR2004",

    # pytest rules
    "PT009",
    "PT027",
]

[tool.ruff.lint.per-file-ignores]
"geoip2/{models,records}.py" = [ "D107", "PLR0913" ]
"tests/*" = ["ANN201", "D"]

[tool.setuptools.package-data]
geoip2 = ["py.typed"]

[tool.tox]
env_list = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "lint",
]
skip_missing_interpreters = false

[tool.tox.env_run_base]
dependency_groups = [
  "dev",
]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.lint]
description = "Code linting"
python = "3.13"
dependency_groups = [
    "dev",
    "lint",
]
commands = [
    ["flake8", "geoip2"],
    ["mypy", "geoip2", "tests"],
    ["pylint", "geoip2"],
    ["ruff", "format", "--check", "--diff", "."],
]

[tool.tox.gh.python]
"3.13" = ["3.13", "lint"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
