[project]
name = "geoip2"
version = "5.1.0"
description = "MaxMind GeoIP2 API"
authors = [
    {name = "Gregory Oschwald", email = "goschwald@maxmind.com"},
]
dependencies = [
    "aiohttp>=3.6.2,<4.0.0",
    "maxminddb>=2.7.0,<3.0.0",
    "requests>=2.24.0,<3.0.0",
]
requires-python = ">=3.9"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: Proxy Servers",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-httpserver>=1.0.10",
    "types-requests>=2.32.0.20250328",
]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "HISTORY.rst",
    "README.rst",
    "LICENSE",
    "docs/html",
    "examples/*.py",
    "tests/*.py",
    "tests/data/test-data/*.mmdb"
]

[project.urls]
Homepage = "https://www.maxmind.com/"
Documentation = "https://geoip2.readthedocs.org/"
"Source Code" = "https://github.com/maxmind/GeoIP2-python"
"Issue Tracker" = "https://github.com/maxmind/GeoIP2-python/issues"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Skip type annotation on **_
    "ANN003",

    # Redundant as the formatter handles missing trailing commas.
    "COM812",

    # documenting magic methods
    "D105",

    # Conflicts with D211
    "D203",

    # Conflicts with D212
    "D213",

    # Magic numbers for HTTP status codes seem ok most of the time.
    "PLR2004",

    # pytest rules
    "PT009",
    "PT027",
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["ALL"]
"src/geoip2/{models,records}.py" = [ "D107", "PLR0913" ]
"tests/*" = ["ANN201", "D"]

[tool.tox]
env_list = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "lint",
]
skip_missing_interpreters = false

[tool.tox.env_run_base]
dependency_groups = [
  "dev",
]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.lint]
description = "Code linting"
python = "3.13"
dependency_groups = [
    "dev",
    "lint",
]
commands = [
    ["mypy", "src", "tests"],
    ["ruff", "check"],
    ["ruff", "format", "--check", "--diff", "."],
]

[tool.tox.gh.python]
"3.13" = ["3.13", "lint"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
