[project]
name = "geoip2"
version = "5.3.0"
description = "MaxMind GeoIP API"
authors = [
    {name = "Gregory Oschwald", email = "goschwald@maxmind.com"},
]
dependencies = [
    "aiohttp>=3.14.1,<4.0.0",
    "maxminddb>=3.0.0,<4.0.0",
    "requests>=2.24.0,<3.0.0",
]
requires-python = ">=3.10"
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: Proxy Servers",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-httpserver>=1.0.10",
    "tox-uv>=1.29.0",
]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "HISTORY.rst",
    "README.rst",
    "LICENSE",
    "docs/html",
    "examples/*.py",
    "tests/*.py",
    "tests/data/test-data/*.mmdb"
]

[project.urls]
Homepage = "https://www.maxmind.com/en/home"
Documentation = "https://geoip2.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/maxmind/GeoIP2-python"
"Issue Tracker" = "https://github.com/maxmind/GeoIP2-python/issues"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Redundant as the formatter handles missing trailing commas.
    "COM812",

    # documenting magic methods
    "D105",

    # Conflicts with D211
    "D203",

    # Conflicts with D212
    "D213",

    # Magic numbers for HTTP status codes seem ok most of the time.
    "PLR2004",

    # pytest rules
    "PT009",
    "PT027",
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["ALL"]
"src/geoip2/{models,records}.py" = [ "D107", "PLR0913" ]
# FBT003: We use assertIs with boolean literals to verify values are actual
# booleans (True/False), not just truthy/falsy values
"tests/*" = ["ANN201", "D", "FBT003"]

[tool.tox]
env_list = [
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "3.14",
    "lint",
]
skip_missing_interpreters = false

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = [
  "dev",
]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.lint]
description = "Code linting"
python = "3.14"
dependency_groups = [
    "dev",
    "lint",
]
commands = [
    ["mypy", "src", "tests"],
    ["ruff", "check"],
    ["ruff", "format", "--check", "--diff", "."],
]

[tool.tox.gh.python]
"3.14" = ["3.14", "lint"]
"3.13" = ["3.13"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
