[flake8]
# black uses 88 : ¯\_(ツ)_/¯
max-line-length = 88

[options.package_data]
geoip2 = py.typed

[wheel]
universal = 1

[pylint.message_control]
disable = duplicate-code

[tox:tox]
envlist = {py37,py38,py39,py310,py311,py312}-test,py312-{black,lint,flake8,mypy}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312,black,lint,flake8,mypy

[testenv:{py37,py38,py39,py310}-test]
deps =
    mocket
    pytest

    # explicitly require indirect dependency to fix build failure.
    # This can be removed when aiohttp 3.9 is released.
    charset-normalizer==2.1.1
commands = pytest tests

[testenv:py312-black]
deps = black
commands = black --check --diff .

[testenv:py312-lint]
deps = pylint
commands = pylint geoip2

[testenv:py312-flake8]
deps = flake8
commands = flake8 geoip2

[testenv:py312-mypy]
deps =
    mypy
    types-requests
    voluptuous-stubs
commands = mypy geoip2 tests
